disks: Filter out root devices from "all" sensors

The values for these devices are already included in the aggregated
values, so including them will lead to too high a value.

BUG: 477983